<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav1"
            android:title="Elemento1" />
        <item
            android:id="@+id/nav2"
            android:title="Elemento2" />
    </group>
</menu>